--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.3.2",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.7",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
@@ -34,6 +35,8 @@
     "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^5.12.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
