--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,14 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "ES2020",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true
-  }
+  },
+  "lib": ["ES2020"],
+  "include": ["src/**/*", "prisma/**/*"],
+  "exclude": ["node_modules"],
 }
