--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "skipLibCheck": true
   },
   "lib": ["ES2020"],
-  "include": ["src/**/*", "prisma/**/*"],
+  "include": ["src/**/*", "prisma/**/*", "test/**/*"],
   "exclude": ["node_modules"],
 }
